--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -24,7 +24,7 @@ In case some technical aspect is not working you can raise an issue in our [gith
 ## Contributors
 
 - **Work Package Leaders:** Univ.-Prof. Dr. Annie Waldherr, Univ.-Prof. Hajo Boomgaarden, PhD
-- **Scientific Team:** Dr. Fabienne Lind, Paul Balluff, Celina Dinhopl
+- **Scientific Team:** Dr. Fabienne Lind, Paul Balluff, Marvin Stecker, Celina Dinhopl 
 - **Technical Implementation:** Paul Balluff
 
 ## References
