--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -31,6 +31,37 @@ In case some technical aspect is not working you can raise an issue in our [gith
 
 - Schwaiger, L. (2022). *Gegen die Öffentlichkeit: Alternative Nachrichtenmedien im deutschsprachigen Raum*. Bielefeld: transcript Verlag. [10.1515/9783839461211](https://doi.org/10.1515/9783839461211) (List of alternative media for German speaking countries).
 
+## Citation
+
+If you want to reference the inventory, please use the following citation:
+
+- Balluff, P., Lind, F., Boomgaarden, H. G., & Waldherr, A. (2022). Mapping the European media landscape – Meteor, a curated and community-coded inventory of news sources. *European Journal of Communication*. [10.1177/02673231221112006](https://doi.org/10.1177/02673231221112006)
+
+```
+@article{doi:10.1177/02673231221112006,
+    author = {Paul Balluff and Fabienne Lind and Hajo G. Boomgaarden and Annie Waldherr},
+    title = {Mapping the European media landscape – Meteor, a curated and community-coded inventory of news sources},
+    journal = {European Journal of Communication},
+    year = {2022},
+    doi = {10.1177/02673231221112006},
+}
+```
+
+If you are using the data in this inventory, please use the following citation:
+
+- Balluff, P., Lind, F., Stecker, M., Dinhopl, C., Boomgaarden, H. G., Waldherr, A. (2022). *Meteor: Inventory of news sources, media organizations, and text analysis tools*. OPTED. [https://meteor.opted.eu](https://meteor.opted.eu)
+
+```
+    @techreport{Meteor,
+        author = {Paul Balluff and Fabienne Lind and Marvin Stecker and Celina Dinhopl and Hajo G. Boomgaarden and Annie Waldherr},
+        title = {Meteor: Inventory of news sources, media organizations, and text analysis tools},
+        year = {2022},
+        institution = {OPTED},
+        type = {Database}
+        url = {https://meteor.opted.eu}
+    }
+```
+
 # Changelog
 
 ### 05 Jul 2022: Materials
