--- a/flaskinventory/templates/view/elements/archive/about.html
+++ b/flaskinventory/templates/view/elements/archive/about.html
@@ -13,5 +13,11 @@
         <dt class="col-sm-3">Total</dt>
         <dd class="col-sm-9"><a href="{{ url_for('view.advanced_query') }}">{{ entry.num_sources }}</a>
         </dd>
+        {% if entry.text_units %}
+        <dt class="col-sm-3">Text Units</dt>
+        <dd class="col-sm-9">
+            {{ render_tags(entry.text_units) }}
+        </dd>
+        {% endif %}
     </dl>
 </div>
