--- a/flaskinventory/templates/view/elements/archive/about.html
+++ b/flaskinventory/templates/view/elements/archive/about.html
@@ -1,4 +1,4 @@
-
+{% from "helpers/_viewhelpers.html" import render_tags, render_publication %}
 <div class="border rounded p-3">
     <dl class="row">
         <dt class="col-sm-3 mb-4"><h5>About</h5></dt>
