#146 render and update schema

--- a/flaskinventory/templates/view/elements/researchpaper/sources_included.html
+++ b/flaskinventory/templates/view/elements/researchpaper/sources_included.html
@@ -48,6 +48,7 @@
     </dl>
 </div>
 {% endif %}
+{% from "helpers/_viewhelpers.html" import render_tags, render_publication %}
 <div class="border rounded p-3">
     <dl class="row">
         <dt class="col-sm-3 mb-4"><h5>Research</h5></dt>
