#162 fixed spelling and order

--- a/flaskinventory/templates/view/elements/conceptvar/reverse.html
+++ b/flaskinventory/templates/view/elements/conceptvar/reverse.html
@@ -1,21 +1,21 @@
 {% from "helpers/_viewhelpers.html" import render_publication %}
 <div class="border rounded p-3">
     <dl class="row">
-        <dt class="col-sm-3 mb-4"><h5>Dataset</h5></dt>
-        <dd class="col-sm-9 mb-4"><small class="text-muted">These datasets have this conceptual variable.</small></dd>
+        <dt class="col-sm-3 mb-4"><h5>Tools</h5></dt>
+        <dd class="col-sm-9 mb-4"><small class="text-muted">These tools can measure this concept.</small></dd>
+        {% if entry.tools %} 
         <dt class="col-sm-3"></dt>
         <dd class="col-sm-9 mb-4">
-        {% if entry.datasets %} 
-            {% for dataset in entry.datasets %}
-                <p>{{ render_publication(dataset) }}</p>
+            {% for tool in entry.tools %}
+                <p>{{ render_publication(tool) }}</p>
             {% endfor %}
-        {% endif %}
         </dd>
+        {% endif %}
     </dl>
 </div>
 <div class="border rounded p-3">
     <dl class="row">
-        <dt class="col-sm-3 mb-4"><h5>Corpus</h5></dt>
+        <dt class="col-sm-3 mb-4"><h5>Corpora</h5></dt>
         <dd class="col-sm-9 mb-4"><small class="text-muted">These corpora this conceptual variable as annotation.</small></dd>
         <dt class="col-sm-3"></dt>
         <dd class="col-sm-9 mb-4">
@@ -29,15 +29,15 @@
 </div>
 <div class="border rounded p-3">
     <dl class="row">
-        <dt class="col-sm-3 mb-4"><h5>Tools</h5></dt>
-        <dd class="col-sm-9 mb-4"><small class="text-muted">These tools can measure this concept.</small></dd>
-        {% if entry.tools %} 
+        <dt class="col-sm-3 mb-4"><h5>Datasets</h5></dt>
+        <dd class="col-sm-9 mb-4"><small class="text-muted">These datasets have this conceptual variable.</small></dd>
         <dt class="col-sm-3"></dt>
         <dd class="col-sm-9 mb-4">
-            {% for tool in entry.tools %}
-                <p>{{ render_publication(tool) }}</p>
+        {% if entry.datasets %} 
+            {% for dataset in entry.datasets %}
+                <p>{{ render_publication(dataset) }}</p>
             {% endfor %}
-        </dd>
         {% endif %}
+        </dd>
     </dl>
 </div>
