--- a/flaskinventory/templates/view/elements/textunit/reverse.html
+++ b/flaskinventory/templates/view/elements/textunit/reverse.html
@@ -1,7 +1,7 @@
 {% from "helpers/_viewhelpers.html" import render_publication %}
 <div class="border rounded p-3">
     <dl class="row">
-        <dt class="col-sm-3 mb-4"><h5>Corpus</h5></dt>
+        <dt class="col-sm-3 mb-4"><h5>Corpora</h5></dt>
         <dd class="col-sm-9 mb-4"><small class="text-muted">These corpora have this text unit.</small></dd>
         <dt class="col-sm-3"></dt>
         <dd class="col-sm-9 mb-4">
