hide email address because of spam...

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -17,7 +17,7 @@ Please visit <a href="https://opted.eu" target="_blank">opted.eu</a> for more in
 You can reach us via various means. If you have feedback or questions your can either send us an email to [wp3@opted.eu](mailto:wp3@opted.eu)
 or also poke us with a tweet [@OPTED_H2020](https://twitter.com/OPTED_H2020).
 
-In case some technical aspect is not working you can raise an issue in our [github repository](https://github.com/opted-eu) or directly send an email to [Paul](mailto:paul.balluff@univie.ac.at)
+In case some technical aspect is not working you can raise an issue in our [github repository](https://github.com/opted-eu) or directly send an email to [Paul](https://compcommlab.univie.ac.at/team/praedocs/)
 
 
 
