--- a/flaskinventory/templates/helpers/_viewhelpers.html
+++ b/flaskinventory/templates/helpers/_viewhelpers.html
@@ -44,7 +44,7 @@
 {% endmacro %}
 
 {% macro render_publication(publication) %}
-    <a href="{{ url_for('view.view_uid', uid=publication.uid) }}" class="me-1">{{ publication.title if publication.title else publication.name }}</a>
+    <a href="{% if publication.get('dgraph.type') %}{{ url_for('view.view_generic', unique_name=publication.unique_name, dgraph_type=publication.get('dgraph.type')[0]) }}{% else %}{{ url_for('view.view_uid', uid=publication.uid) }}{% endif %}" class="me-1">{{ publication.title if publication.title else publication.name }}</a>
     <span>
     {% if publication.authors is string %} 
         {{ publication.authors }}
